--- a/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "06e2c0d0",
    "metadata": {
     "deletable": false,
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "22a0142c",
    "metadata": {
     "deletable": false,
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "28dd3487",
    "metadata": {
     "deletable": false,
@@ -1265,7 +1265,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "ecc1c7c2",
    "metadata": {
     "deletable": false,
@@ -1335,16 +1335,23 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
-    "#def get_country():\n",
+    "def get_country(iso2_string):\n",
+    "    try:\n",
+    "        return cc.country_alpha2_to_country_name(iso2_string)\n",
+    "    except (KeyError, TypeError):\n",
+    "        return iso2_string\n",
     "\n",
-    "#df_tb_who_country = ..."
+    "\n",
+    "df_tb_who_country = df_tb_who\n",
+    "df_tb_who_country[\"country\"] = df_tb_who_country[\"iso2\"].apply(lambda iso_country: get_country(iso_country)).astype(str)\n",
+    "df_tb_who_country = df_tb_who_country.drop(columns=\"iso2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "59c2191b",
    "metadata": {
     "deletable": false,
@@ -1390,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "ade46c46",
    "metadata": {
     "deletable": false,
@@ -1404,7 +1411,214 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>new_sp</th>\n",
+       "      <th>new_sp_m04</th>\n",
+       "      <th>new_sp_m514</th>\n",
+       "      <th>new_sp_m014</th>\n",
+       "      <th>new_sp_m1524</th>\n",
+       "      <th>new_sp_m2534</th>\n",
+       "      <th>new_sp_m3544</th>\n",
+       "      <th>new_sp_m4554</th>\n",
+       "      <th>new_sp_m5564</th>\n",
+       "      <th>...</th>\n",
+       "      <th>new_sp_f514</th>\n",
+       "      <th>new_sp_f014</th>\n",
+       "      <th>new_sp_f1524</th>\n",
+       "      <th>new_sp_f2534</th>\n",
+       "      <th>new_sp_f3544</th>\n",
+       "      <th>new_sp_f4554</th>\n",
+       "      <th>new_sp_f5564</th>\n",
+       "      <th>new_sp_f65</th>\n",
+       "      <th>new_sp_fu</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  new_sp  new_sp_m04  new_sp_m514  new_sp_m014  new_sp_m1524  \\\n",
+       "0  1989     NaN         NaN          NaN          NaN           NaN   \n",
+       "1  1990     NaN         NaN          NaN          NaN           NaN   \n",
+       "2  1991     NaN         NaN          NaN          NaN           NaN   \n",
+       "3  1992     NaN         NaN          NaN          NaN           NaN   \n",
+       "4  1993    15.0         NaN          NaN          NaN           NaN   \n",
+       "\n",
+       "   new_sp_m2534  new_sp_m3544  new_sp_m4554  new_sp_m5564  ...  new_sp_f514  \\\n",
+       "0           NaN           NaN           NaN           NaN  ...          NaN   \n",
+       "1           NaN           NaN           NaN           NaN  ...          NaN   \n",
+       "2           NaN           NaN           NaN           NaN  ...          NaN   \n",
+       "3           NaN           NaN           NaN           NaN  ...          NaN   \n",
+       "4           NaN           NaN           NaN           NaN  ...          NaN   \n",
+       "\n",
+       "   new_sp_f014  new_sp_f1524  new_sp_f2534  new_sp_f3544  new_sp_f4554  \\\n",
+       "0          NaN           NaN           NaN           NaN           NaN   \n",
+       "1          NaN           NaN           NaN           NaN           NaN   \n",
+       "2          NaN           NaN           NaN           NaN           NaN   \n",
+       "3          NaN           NaN           NaN           NaN           NaN   \n",
+       "4          NaN           NaN           NaN           NaN           NaN   \n",
+       "\n",
+       "   new_sp_f5564  new_sp_f65  new_sp_fu  country  \n",
+       "0           NaN         NaN        NaN  Andorra  \n",
+       "1           NaN         NaN        NaN  Andorra  \n",
+       "2           NaN         NaN        NaN  Andorra  \n",
+       "3           NaN         NaN        NaN  Andorra  \n",
+       "4           NaN         NaN        NaN  Andorra  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_tb_who_country.head()"
    ]
@@ -1432,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "628adf15",
    "metadata": {
     "deletable": false,
@@ -1449,12 +1663,13 @@
    "source": [
     "#tidy_tb = pd.melt(...)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "tidy_tb = pd.melt(df_tb_who_country, id_vars=[\"year\", \"country\"], var_name=\"column_name\", value_name=\"cases\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "5386385b",
    "metadata": {
     "deletable": false,
@@ -1502,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "4c0eed30",
    "metadata": {
     "deletable": false,
@@ -1518,12 +1733,13 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "clean_tidy_tb = tidy_tb[(tidy_tb[\"country\"]!=\"nan\") & (tidy_tb[\"cases\"].notna())].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "54623e4e",
    "metadata": {
     "deletable": false,
@@ -1590,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "93348cec",
    "metadata": {
     "deletable": false,
@@ -1608,12 +1824,14 @@
     "#clean_tidy_tb[[\"sex\", \"age\"]] =\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "clean_tidy_tb[[\"sex\", \"age\"]] = clean_tidy_tb.column_name.str.extract(r'(?P<sex>[mf])(?P<age>[u0-9]*)').dropna(how=\"any\", axis=0)\n",
+    "clean_tidy_tb = clean_tidy_tb.dropna(how=\"any\", axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "99c275ac",
    "metadata": {
     "deletable": false,
@@ -1659,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "bdb47e10",
    "metadata": {
     "deletable": false,
@@ -1689,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "65beb34c",
    "metadata": {
     "deletable": false,
@@ -1707,12 +1925,14 @@
     "# clean_tidy_tb[\"age\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "clean_tidy_tb[\"age\"] = clean_tidy_tb[\"age\"].map(decode_age)\n",
+    "clean_tidy_tb = clean_tidy_tb.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "f9b7800d",
    "metadata": {
     "deletable": false,
@@ -1755,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "d7260cee",
    "metadata": {
     "deletable": false,
@@ -1772,12 +1992,13 @@
    "source": [
     "# final_tb_df = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "final_tb_df = clean_tidy_tb.drop(columns=\"column_name\").reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "858119af",
    "metadata": {
     "deletable": false,
@@ -1840,7 +2061,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('slu00')",
+   "display_name": "Python 3.8.10 ('slu05')",
    "language": "python",
    "name": "python3"
   },
@@ -1858,7 +2079,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "339eccdd14f7629c1550914cdd40c777fe39f8e0e8bf919c6c827dc1e7090c60"
+    "hash": "9e08dc7a8551636f76550f4024519e9a26220ac4e0efb1a78a372cf047746b8c"
    }
   }
  },
