--- a/S01 - Bootcamp and Binary Classification/SLU08 - Metrics for Regression/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU08 - Metrics for Regression/Exercise notebook.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -58,7 +58,131 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "      <th>s4</th>\n",
+       "      <th>s5</th>\n",
+       "      <th>s6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.038076</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.061696</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>-0.044223</td>\n",
+       "      <td>-0.034821</td>\n",
+       "      <td>-0.043401</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.019908</td>\n",
+       "      <td>-0.017646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.001882</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.051474</td>\n",
+       "      <td>-0.026328</td>\n",
+       "      <td>-0.008449</td>\n",
+       "      <td>-0.019163</td>\n",
+       "      <td>0.074412</td>\n",
+       "      <td>-0.039493</td>\n",
+       "      <td>-0.068330</td>\n",
+       "      <td>-0.092204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.085299</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.044451</td>\n",
+       "      <td>-0.005671</td>\n",
+       "      <td>-0.045599</td>\n",
+       "      <td>-0.034194</td>\n",
+       "      <td>-0.032356</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.002864</td>\n",
+       "      <td>-0.025930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.089063</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.011595</td>\n",
+       "      <td>-0.036656</td>\n",
+       "      <td>0.012191</td>\n",
+       "      <td>0.024991</td>\n",
+       "      <td>-0.036038</td>\n",
+       "      <td>0.034309</td>\n",
+       "      <td>0.022692</td>\n",
+       "      <td>-0.009362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.005383</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.036385</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>0.003935</td>\n",
+       "      <td>0.015596</td>\n",
+       "      <td>0.008142</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>-0.031991</td>\n",
+       "      <td>-0.046641</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        age       sex       bmi        bp        s1        s2        s3  \\\n",
+       "0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
+       "1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
+       "2  0.085299  0.050680  0.044451 -0.005671 -0.045599 -0.034194 -0.032356   \n",
+       "3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
+       "4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
+       "\n",
+       "         s4        s5        s6  \n",
+       "0 -0.002592  0.019908 -0.017646  \n",
+       "1 -0.039493 -0.068330 -0.092204  \n",
+       "2 -0.002592  0.002864 -0.025930  \n",
+       "3  0.034309  0.022692 -0.009362  \n",
+       "4 -0.002592 -0.031991 -0.046641  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Base imports\n",
     "import numpy as np\n",
@@ -75,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -154,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -180,17 +304,20 @@
     "    # 1) Compute the error.\n",
     "    # error = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    error = y-y_pred\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 2) Compute the absolute value of the errors for each sample\n",
     "    # abs_error = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    abs_error = np.absolute(error)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 3) Compute the mean of the absolute value of the errors\n",
     "    # mae = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mae = np.sum(abs_error)/abs_error.shape[0]\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return mae"
    ]
@@ -215,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -229,7 +356,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error Diabetes dataset: 43.277395083749866\n"
+     ]
+    }
+   ],
    "source": [
     "mae = mean_absolute_error(y_diabetes, y_hat_diabetes)\n",
     "print('Mean Absolute Error Diabetes dataset: {}'.format(mae))\n",
@@ -257,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -283,17 +418,20 @@
     "    # 1) Compute the error.\n",
     "    # error = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    error = y-y_pred\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 2) Compute the squared value of the errors for each sample\n",
     "    # squared_error = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    squared_error = error**2\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 3) Compute the mean squared value of the errors\n",
     "    # mse = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mse = np.sum(squared_error)/squared_error.shape[0]\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return mse"
    ]
@@ -317,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -330,7 +468,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error Diabetes dataset: 2859.6903987680657\n"
+     ]
+    }
+   ],
    "source": [
     "mse = mean_squared_error(y_diabetes, y_hat_diabetes)\n",
     "print('Mean Squared Error Diabetes dataset: {}'.format(mse))\n",
@@ -358,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -372,6 +518,9 @@
    },
    "outputs": [],
    "source": [
+    "from cmath import sqrt\n",
+    "\n",
+    "\n",
     "def root_mean_squared_error(y, y_pred): \n",
     "    \"\"\"\n",
     "    Args: \n",
@@ -384,12 +533,14 @@
     "    # 1) Compute the mean squared error. \n",
     "    # mse = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mse = mean_squared_error(y, y_pred)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 2) Compute the root square.\n",
     "    # rmse = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    rmse = sqrt(mse)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return rmse"
    ]
@@ -414,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -428,7 +579,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error Diabetes dataset: (53.47607314274362+0j)\n"
+     ]
+    }
+   ],
    "source": [
     "rmse = root_mean_squared_error(y_diabetes, y_hat_diabetes)\n",
     "print('Root Mean Squared Error Diabetes dataset: {}'.format(rmse))\n",
@@ -473,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -499,21 +658,25 @@
     "    # 1) Compute labels mean.\n",
     "    # y_mean = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    y_mean = np.sum(y)/y.shape[0]\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    # 2) Compute the mean squared error between the target and the predictions.\n",
     "    # mse_pred = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mse_pred = mean_squared_error(y, y_pred)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 3) Compute the mean squared error between the target and its mean.\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mse_mean = mean_squared_error(y, y_mean)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 4) Finally, compute R²\n",
     "    # r2 = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    r2 = 1 - mse_pred/mse_mean\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return r2"
    ]
@@ -537,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -550,7 +713,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Diabetes dataset: 0.5177494254132934\n"
+     ]
+    }
+   ],
    "source": [
     "r2 = r_squared(y_diabetes, y_hat_diabetes)\n",
     "print('R² Diabetes dataset: {}'.format(r2))\n",
@@ -578,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -605,17 +776,20 @@
     "    # 1) Compute R².\n",
     "    # r2 = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    r2 = r_squared(y, y_pred)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # 2) Get number of samples \n",
     "    # N = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    N = y.shape[0]\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "    # 3) Adjust R²\n",
     "    # r2_adj = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    r2_adj = 1 - ((N-1)*(1-r2)/(N-1-K))\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return r2_adj"
    ]
@@ -639,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -652,7 +826,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted R² Diabetes dataset: 0.506560316954205\n"
+     ]
+    }
+   ],
    "source": [
     "r2 = adjusted_r_squared(y_diabetes, y_hat_diabetes, x_diabetes.shape[1])\n",
     "print('Adjusted R² Diabetes dataset: {}'.format(r2))\n",
@@ -685,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -724,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -747,7 +929,8 @@
     "        rmse : float with Root Mean Squared Error\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return sqrt(sklearn_metrics.mean_squared_error(y, y_pred))"
    ]
   },
   {
@@ -769,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -782,7 +965,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn RMSE Diabetes dataset: (53.47607314274362+0j)\n"
+     ]
+    }
+   ],
    "source": [
     "rmse = sklearn_root_mean_squared_error(y_diabetes, y_hat_diabetes)\n",
     "print('Sklearn RMSE Diabetes dataset: {}'.format(rmse))\n",
@@ -810,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -834,7 +1025,10 @@
     "        r2_adj : float with adjusted R squared value\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    N = y.shape[0]\n",
+    "    return 1 - ((N-1)*(1-sklearn_metrics.r2_score(y, y_pred))/(N-1-K))\n",
+    "    "
    ]
   },
   {
@@ -856,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -869,7 +1063,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn Adjusted R² Diabetes dataset: 0.506560316954205\n"
+     ]
+    }
+   ],
    "source": [
     "r2 = sklearn_adjusted_r_squared(y_diabetes, y_hat_diabetes, x_diabetes.shape[1])\n",
     "print('Sklearn Adjusted R² Diabetes dataset: {}'.format(r2))\n",
@@ -895,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -907,7 +1109,28 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metric for diabetes dataset with base implementation:\n",
+      "Mean Absolute Error diabetes dataset: 43.277395083749866\n",
+      "Mean Squared Error diabetes dataset: 2859.6903987680657\n",
+      "Root Mean Squared Error diabetes dataset: (53.47607314274362+0j)\n",
+      "R² diabetes dataset: 0.5177494254132934\n",
+      "Adjusted R² diabetes dataset: 0.506560316954205\n",
+      "\n",
+      "\n",
+      "Metric for diabetes dataset with scikitlearn:\n",
+      "Mean Absolute Error diabetes dataset: 43.277395083749866\n",
+      "Mean Squared Error diabetes dataset: 2859.6903987680657\n",
+      "Root Mean Squared Error diabetes dataset: (53.47607314274362+0j)\n",
+      "R² diabetes dataset: 0.5177494254132934\n",
+      "Adjusted R² diabetes dataset: 0.506560316954205\n"
+     ]
+    }
+   ],
    "source": [
     "MAE = mean_absolute_error(y_diabetes, y_hat_diabetes)\n",
     "MSE = mean_squared_error(y_diabetes, y_hat_diabetes)\n",
@@ -960,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1002,19 +1225,33 @@
     "    \n",
     "    # Split your data into train and test (use a test size of 0.4 and a random_state = 42)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)\n",
     "    \n",
     "    # Train your model using your train data\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    clf.fit(X_train, y_train)\n",
     "    \n",
     "    # Use your model to create predictions on your test dataset (y_hat = ...)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    y_hat = clf.predict(X_test)\n",
     "    \n",
     "    # Calculate scores depending on the scoring function\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if scoring == \"mean_absolute_error\":\n",
+    "        scores = mean_absolute_error(y_test, y_hat)\n",
+    "    elif scoring == \"mean_squared_error\":\n",
+    "        scores = mean_squared_error(y_test, y_hat)   \n",
+    "    elif scoring == \"r2_score\":\n",
+    "        scores = r_squared(y_test, y_hat)\n",
+    "    else:\n",
+    "        print('Invalid metrics')\n",
+    "        return None\n",
+    "\n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return clf, scores\n"
    ]
@@ -1038,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1074,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1087,7 +1324,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hold-out method evaluation for Diabetes dataset:\n",
+      "MAE with Linear Regression: 42.49655077889233\n",
+      "MAE with SGD: 42.90810171828024\n",
+      "MSE with Linear Regression: 2832.9913004406994\n",
+      "MSE with SGD: 2871.862148517374\n",
+      "R² Score with Linear Regression: 0.5157444756897699\n",
+      "R² Score with SGD: 0.5091001125698319\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hold-out method evaluation for Diabetes dataset:')\n",
     "\n",
@@ -1127,7 +1378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('slu05')",
    "language": "python",
    "name": "python3"
   },
@@ -1141,7 +1392,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e08dc7a8551636f76550f4024519e9a26220ac4e0efb1a78a372cf047746b8c"
+   }
   }
  },
  "nbformat": 4,
