--- a/S01 - Bootcamp and Binary Classification/SLU10 - Metrics for Classification/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU10 - Metrics for Classification/Exercise notebook.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1653,7 +1653,82 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>probas</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000860</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.022122</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.216413</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.118217</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target    probas  prediction\n",
+       "0       0  0.000011           0\n",
+       "1       0  0.000860           0\n",
+       "2       0  0.022122           0\n",
+       "3       0  0.216413           0\n",
+       "4       0  0.118217           0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = load_data()\n",
     "\n",
@@ -1688,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1717,12 +1792,13 @@
     "    # NOTE: Even though this is not a good programming practice, just \n",
     "    #       for the sake of the exercise, ensure you import the right \n",
     "    #       function within this code:\n",
-    "    \n",
+    "    from sklearn import metrics\n",
     "    # Hint:\n",
     "    # from ...\n",
     "    # accuracy = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    accuracy = metrics.accuracy_score(target, predictions)\n",
+    "    # raise NotImplementedError()\n",
     "    return accuracy\n",
     "\n",
     "\n",
@@ -1741,12 +1817,13 @@
     "    # NOTE: Even though this is not a good programming practice, just \n",
     "    #       for the sake of the exercise, ensure you import the right \n",
     "    #       function within this code:\n",
-    "    \n",
+    "    from sklearn import metrics\n",
     "    # Hint:\n",
     "    # from ? import ...\n",
     "    # precision = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    precision = metrics.precision_score(target, predictions)\n",
+    "    # raise NotImplementedError()\n",
     "    return precision\n",
     "\n",
     "\n",
@@ -1765,19 +1842,20 @@
     "    # NOTE: Even though this is not a good programming practice, just \n",
     "    #       for the sake of the exercise, ensure you import the right \n",
     "    #       function within this code:\n",
-    "    \n",
+    "    from sklearn import metrics\n",
     "    # Hint:\n",
     "    # from ? import ...\n",
     "    # recall = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    recall = metrics.recall_score(target, predictions)\n",
+    "    # raise NotImplementedError()\n",
     "    return recall\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1826,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1839,7 +1917,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8341346153846154\n",
+      "Precision: 0.47674418604651164\n",
+      "Recall: 0.6307692307692307\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Accuracy: {accuracy_score_sklearn(df['prediction'], df['target'])}\")\n",
     "print(f\"Precision: {precision_metric_sklearn(df['prediction'], df['target'])}\")\n",
@@ -1895,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1927,18 +2015,20 @@
     "    #       function within this code:\n",
     "    \n",
     "    # Hint:\n",
-    "\n",
+    "    from sklearn import metrics\n",
+    "    \n",
     "    # from ? import ...\n",
     "    # conf_mat = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    conf_mat = metrics.confusion_matrix(target, predictions)\n",
+    "    # raise NotImplementedError()\n",
     "    return conf_mat\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1991,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2004,7 +2094,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      " [[612  90]\n",
+      " [ 48  82]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Confusion matrix:\\n {confusion_matrix_sklearn(df['prediction'], df['target'])}\")\n"
    ]
@@ -2029,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2060,18 +2160,18 @@
     "        roc_auc: roc area under the curve\n",
     "\n",
     "    \"\"\"    \n",
-    "\n",
+    "    from sklearn import metrics\n",
     "    # from ? import ... \n",
-    "    # fpr, tpr, thresholds = ...\n",
-    "    # roc_auc = ...\n",
+    "    fpr, tpr, thresholds = metrics.roc_curve(target.values, probas.values)\n",
+    "    roc_auc = metrics.roc_auc_score(target.values, probas.values)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    return fpr, tpr, thresholds, roc_auc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2126,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2138,7 +2238,22 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01994302 0.02991453 0.02991453 0.03418803 0.03418803 0.03561254\n",
+      " 0.03561254 0.04131054 0.04131054 0.04415954]\n",
+      "[0.24615385 0.24615385 0.25384615 0.25384615 0.26153846 0.26153846\n",
+      " 0.30769231 0.30769231 0.31538462 0.31538462]\n",
+      "[0.46534763 0.46528047 0.46470106 0.45907053 0.45879861 0.45871087\n",
+      " 0.45746255 0.45743462 0.4570742  0.44732789 0.44577029 0.43659683\n",
+      " 0.43534291 0.43522845 0.43443707]\n",
+      "0.8353276353276354\n"
+     ]
+    }
+   ],
    "source": [
     "fpr_test, tpr_test, thresholds_test, roc_auc_test = get_roc_sklearn(df['probas'], df['target'])\n",
     "print(fpr_test[20:30])\n",
