--- a/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a84735bf",
    "metadata": {
     "deletable": false,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eca472f1",
    "metadata": {
     "deletable": false,
@@ -133,14 +133,18 @@
     "    #       for the intercept to the features (like you did in SLU07)\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError() \n",
+    "    coef_0 = coefs[0]\n",
+    "    coefs_ = coefs[1:]\n",
+    "    z= coef_0 + np.matmul(data, coefs_)\n",
+    "    proba = 1/(1 + np.exp(-1*z))\n",
     "    \n",
     "    return proba"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d1f7e3ef",
    "metadata": {
     "deletable": false,
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "921cbe33",
    "metadata": {
     "deletable": false,
@@ -218,7 +222,7 @@
     "        var_x (np.array): array with the features of the training data of size (m, n)\n",
     "                   where m is the number of observations and n the number of features\n",
     "        coefs (float64): an array with the model coefficients of size (1, n+1)\n",
-    "        var_y (float64): an array with the true class labels\n",
+    "        var_y (float64): an array with the true class labels of size (m,1)\n",
     "        \n",
     "    Returns:\n",
     "        cost (np.float): a float with the resulting log-likelihood for the dataset\n",
@@ -226,13 +230,25 @@
     "    \"\"\"\n",
     "   \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "    # N = var_x.shape[0]\n",
+    "    # yi = var_y.reshape(-1,)\n",
+    "    # cost = []\n",
+    "    # for i in range(N):\n",
+    "    #     curr_y = yi[i]\n",
+    "    #     curr_x = var_x[i,:]\n",
+    "    #     pred_prob = predict_proba(curr_x, coefs.reshape(-1,))\n",
+    "    #     cost.append(curr_y*np.log(pred_prob) + (1-curr_y)* np.log(1-pred_prob))\n",
+    "    yi = var_y.reshape(-1,)\n",
+    "    log_reg_p = predict_proba(var_x, coefs.reshape(-1,))\n",
+    "    cost = np.sum(yi*np.log(log_reg_p) + (1-yi)* np.log(1-log_reg_p))\n",
     "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d523045d",
    "metadata": {
     "deletable": false,
@@ -252,11 +268,11 @@
     "x = np.array([[-2, -2], [3.5, 0], [6, 4]])\n",
     "coefficients = np.array([[0 ,2, -1]])\n",
     "y = np.array([[1],[1],[0]])\n",
-    "np.testing.assert_almost_equal(round(log_likelihood_cost_function(x, coefficients, y)),-30.0)\n",
+    "np.testing.assert_almost_equal(round(log_likelihood_cost_function(x, coefficients, y),2),-10.13,1)\n",
     "coefficients_1 = np.array([[3 ,4, -0.6]])\n",
     "x_1 = np.array([[-4, -4], [6, 0], [3, 2], [4, 0]])\n",
     "y_1 = np.array([[0],[1],[0],[1]])\n",
-    "np.testing.assert_almost_equal(round(log_likelihood_cost_function(x_1, coefficients_1, y_1)),-55.0)"
+    "np.testing.assert_almost_equal(round(log_likelihood_cost_function(x_1, coefficients_1, y_1),2),-13.8,1)"
    ]
   },
   {
@@ -393,7 +409,7 @@
     "\n",
     "After you mastered the previous exercise, this one will be a breeze. Do one iteration for Newton's method using the update rule\n",
     "\n",
-    "$$\\beta_{t+1} = \\beta_t + learning\\_rate * \\sum_{i=1}^{N} \\frac{\\left(y_i - \\hat{p}_i(x_i,\\beta_t)\\right)} {\\hat{p}(x_i,\\beta_t) \\ \\left(1 - \\hat{p}(x_i,\\beta_t)\\right) \\ x_i }$$\n",
+    "$$\\beta_{t+1} = \\beta_t + learning\\_rate * \\sum_{i=1}^{N} \\frac{\\left(y_i - \\hat{p}_i(x_i,\\beta_t)\\right)} {\\hat{p}_i(x_i,\\beta_t) \\ \\left(1 - \\hat{p}_i(x_i,\\beta_t)\\right) \\ x_i }$$\n",
     "\n",
     "Write a function that takes as arguments the training data and the learning rate and outputs the model coefficients $\\beta$ after one iteration of Newton's method. Initialize the coefficients with 0 as before."
    ]
@@ -1439,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.14"
   },
   "toc": {
    "base_numbering": 1,
