--- a/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a84735bf",
    "metadata": {
     "deletable": false,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "eca472f1",
    "metadata": {
     "deletable": false,
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d1f7e3ef",
    "metadata": {
     "deletable": false,
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "921cbe33",
    "metadata": {
     "deletable": false,
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "d523045d",
    "metadata": {
     "deletable": false,
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8379ea45",
    "metadata": {
     "deletable": false,
@@ -339,13 +339,18 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    n = x_train.shape[1]\n",
+    "    N = x_train.shape[0]\n",
+    "    coefficients = np.zeros(n+1)\n",
+    "    coefficients[0] = coefficients[0] +learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), np.ones(N))\n",
+    "    coefficients[1:] = coefficients[1:] + learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), x_train)\n",
     "    return coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3da8d12d",
    "metadata": {
     "deletable": false,
