--- a/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "fa2acb21",
    "metadata": {
     "deletable": false,
@@ -454,14 +454,24 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    n = x_train.shape[1]\n",
+    "    N = x_train.shape[0]\n",
+    "    coefficients = np.zeros(n+1)\n",
+    "    x_train_expanded = np.c_[np.ones(N).reshape(-1, 1), x_train]\n",
+    "    p_xb = predict_proba(x_train, coefficients)\n",
+    "    for feat_num in range(n+1):\n",
+    "        nm_sum_elemnts = np.array([((y_train[idx] - p_xb[idx])/(x_value*p_xb[idx]*(1-p_xb[idx]))) for idx, x_value in enumerate(x_train_expanded[:,feat_num])])\n",
+    "        coefficients[feat_num] = coefficients[feat_num]+np.sum(nm_sum_elemnts)*learning_rate\n",
+    "        \n",
+    "    # coefficients[0] = coefficients[0] +learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), np.ones(N))\n",
+    "    # coefficients[1:] = coefficients[1:] + learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), x_train)\n",
     "    \n",
     "    return coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "49940f2e",
    "metadata": {
     "deletable": false,
